More Code Quality Fixes